--- a/JAVASCRIPT-2/index.html
+++ b/JAVASCRIPT-2/index.html
@@ -2,24 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="style.css">
     <title></title>
 </head>
 <body>
 
-    <div class="contenedorrojo">    
-
-        <div class="contenedorazul">
-
-            <button class="button">Click Here</button>
-            <input type="text" class="input" id="">
-            <img src="https://images.pexels.com/photos/1525041/pexels-photo-1525041.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
-    
-        </div>
-
+    <div class="div-container">
+        <h1>ola</h1>
+        <h2>ola</h2>
+        <h6>ola</h6>
+        
     </div>
 
 
-    <script src="codigo.js"></script>
+    <script src="code.js"></script>
 </body>
 </html>
